--- a/app/src/main/res/layout/content_crop_payments_list.xml
+++ b/app/src/main/res/layout/content_crop_payments_list.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
     tools:context=".activities.CropPaymentsListActivity"
     tools:showIn="@layout/activity_crop_payments_list">
@@ -13,7 +14,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="8dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintBottom_toTopOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
