--- a/app/src/main/res/layout/activity_crop_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_bill_manager.xml
@@ -43,7 +43,7 @@
                             android:textStyle="bold" />
 
                         <Spinner
-                            android:id="@+id/spinner_crop_purchase_order_supplier"
+                            android:id="@+id/spinner_crop_bill_supplier"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:background="@drawable/input_shapes"
@@ -177,14 +177,13 @@
                             android:textSize="16sp"
                             android:textStyle="bold" />
 
-                        <EditText
+                        <Spinner
                             android:id="@+id/txt_crop_bill_terms"
                             android:layout_width="match_parent"
                             android:layout_height="wrap_content"
                             android:layout_weight="0.4"
                             android:background="@drawable/input_shapes"
-                            android:hint="Enter.."
-                            android:inputType="none"
+                            android:entries="@array/invoice_terms_list"
                             android:textSize="14sp" />
                     </LinearLayout>
                 </LinearLayout>
@@ -434,7 +433,7 @@
                         android:orientation="horizontal">
 
                         <TextView
-                            android:id="@+id/txt_crop_sales_order_discount"
+                            android:id="@+id/txt_crop_bill_discount"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:gravity="end"
