--- a/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
+++ b/app/src/main/res/layout/activity_crop_payment_bill_manager.xml
@@ -56,30 +56,53 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="vertical"
-                android:layout_marginBottom="15dp"
+                android:layout_marginBottom="10dp"
                 >
 
                 <TextView
 
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="Payment Made (UGX)"
+                    android:text="Payment Made"
                     android:textColor="@color/colorPrimary"
                     android:textStyle="bold"
                     android:layout_weight="0.5"
                     android:textSize="16sp" />
 
-                <EditText
-                    android:id="@+id/sp_crop_payment_bill_payment_made"
+                <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                   android:hint="Enter.."
-                    android:textSize="14sp"
-                    android:layout_weight="0.5"
-                    android:inputType="number"
-                    android:background="@drawable/input_shapes"
-                    />
+                    android:orientation="horizontal"
+                    android:gravity="center_vertical"
+                    android:background="@color/gray_mh"
+                    >
 
+                    <TextView
+                        android:id="@+id/crop_cost"
+                        android:layout_width="wrap_content"
+                        android:layout_height="match_parent"
+                        android:text="@string/ugx"
+                        android:layout_weight="0.2"
+                        android:textSize="14sp"
+                        android:textAlignment="center"
+                        android:textStyle="bold"
+                        android:gravity="center_vertical"
+
+                        />
+
+                    <EditText
+                        android:id="@+id/txt_crop_payment_bill_payment_made"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:ems="10"
+                        android:hint="Enter.."
+                        android:layout_weight="0.8"
+                        android:inputType="number"
+                        android:textSize="14sp"
+                        android:background="@drawable/input_shapes"
+
+                        />
+                </LinearLayout>
 
             </LinearLayout>
 
@@ -102,7 +125,7 @@
 
                 <Spinner
 
-                    android:id="@+id/sp_crop_field_soil_type"
+                    android:id="@+id/sp_crop_payment_bill_payment_mode"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="0.4"
@@ -133,19 +156,18 @@
 
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:text="@string/paid_through"
+                        android:text="@string/select_bill"
                         android:textColor="@color/colorPrimary"
                         android:textStyle="bold"
                         android:textSize="16sp"
                         android:layout_marginRight="5dp"
                         />
 
-                    <EditText
-                        android:id="@+id/txt_crop_bill_paid_through"
+                    <Spinner
+                        android:id="@+id/txt_crop_payment_bill_select_bill"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:ems="10"
-                        android:hint="Enter.."
 
                         android:textSize="14sp"
                         android:background="@drawable/input_shapes"
@@ -169,7 +191,7 @@
                         android:textSize="16sp" />
 
                     <EditText
-                        android:id="@+id/txt_crop_field_croppable_area"
+                        android:id="@+id/txt_crop_payment_bill_reference_number"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:ems="10"
@@ -199,7 +221,7 @@
                     android:textSize="16sp" />
 
                 <EditText
-                    android:id="@+id/sp_crop_field_units"
+                    android:id="@+id/txt_crop_payment_bill_notes"
                     android:layout_width="match_parent"
                     android:layout_height="80dp"
                    android:hint="Enter.."
