--- a/app/src/main/res/layout/activity_crop_payment_bills_list.xml
+++ b/app/src/main/res/layout/activity_crop_payment_bills_list.xml
@@ -5,16 +5,16 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/light_gray"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".activities.CropPurchaseOrdersListActivity"
-    >
-
+    tools:context=".activities.CropPaymentBillsListActivity">
     <android.support.v7.widget.RecyclerView
-        android:id="@+id/crop_purchase_order_recyc_view"
+        android:id="@+id/crop_payment_bill_recyc_view"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
 
-       android:layout_margin="8dp">
+        android:layout_marginTop="8dp"
+        >
 
     </android.support.v7.widget.RecyclerView>
 </LinearLayout>
