--- a/app/src/main/res/layout/crop_purchase_order_list_card.xml
+++ b/app/src/main/res/layout/crop_purchase_order_list_card.xml
@@ -2,15 +2,14 @@
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
+    android:layout_height="wrap_content"
    android:orientation="vertical">
     <LinearLayout
         android:orientation="vertical"
         android:background="@color/white"
         android:layout_width="match_parent"
-        android:layout_marginTop="10dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp">
+        android:layout_margin="5dp">
 
 
 
