--- a/app/src/main/res/layout/crop_record_payment_received.xml
+++ b/app/src/main/res/layout/crop_record_payment_received.xml
@@ -176,15 +176,14 @@
                 android:orientation="horizontal"
                 android:gravity="center_vertical"
                 android:background="@color/gray_mh"
-                android:layout_marginBottom="10dp"
-                android:layout_marginRight="15dp">
+                android:layout_marginRight="10dp">
 
                 <TextView
                     android:id="@+id/crop_cost"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="match_parent"
                     android:text="@string/ugx"
-                    android:layout_weight="0.1"
+                    android:layout_weight="0.7"
                     android:textSize="14sp"
                     android:textAlignment="center"
                     android:textStyle="bold"
@@ -194,11 +193,12 @@
 
                 <EditText
                     android:id="@+id/txt_crop_record_payment_received_amount"
-                    android:layout_width="wrap_content"
+                    android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:ems="8"
                     android:hint="Enter.."
-                    android:layout_weight="0.5"
+                    android:layout_weight="0.3"
+
                     android:inputType="number"
                     android:textSize="14sp"
                     android:background="@drawable/input_shapes"
