--- a/app/src/main/res/layout/crop_irrigation_list_card.xml
+++ b/app/src/main/res/layout/crop_irrigation_list_card.xml
@@ -1,21 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray">
-
+    >
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+      >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,7 +45,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_view_crop_spraying_card_date"
+                android:id="@+id/txt_view_crop_irrigation_card_operation_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -71,52 +63,63 @@
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+                    android:orientation="horizontal"
+                    >
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_spray_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Weed Control Spray"
-                        android:textColor="@color/blackText"
-                        android:textStyle="bold" />
 
-                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_marginRight="4dp"
+                        android:text="Irrigation"
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_crop_irrigation_card_irrigated_area"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(2.5 ha)"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
                         android:layout_weight="0.1"
                         android:orientation="horizontal">
 
 
                         <ImageView
-                            android:id="@+id/img_crop_spraying_card_more"
+                            android:id="@+id/img_crop_irrigation_card_more"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/more_options_icon" />
                     </LinearLayout>
-                </LinearLayout>
 
+                </LinearLayout>
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                     />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Operator : "
+
+                        android:text="Duration : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_operator"
+                        android:id="@+id/txt_view_crop_irrigation_card_duration"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="John Kiwanuka"
+
+                        android:text="100 l/hr"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
@@ -126,93 +129,113 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+
                         android:text="Rate : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_rate"
+                        android:id="@+id/txt_view_crop_irrigation_card_system_rate"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
+
                         android:text="56kg/ha"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
+
+
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Water Quantity : "
+                            android:textColor="@color/blackText"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txt_view_crop_irrigation_card_total_water_quantity"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="300 ltrs "
+                            android:textColor="@color/blackText" />
+                    </LinearLayout>
+
+                    <LinearLayout
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:orientation="horizontal">
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="Qty/ha : "
+                            android:textColor="@color/blackText"
+                            android:textStyle="bold" />
+
+                        <TextView
+                            android:id="@+id/txt_view_crop_irrigation_card_quantity_per_acre"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:text="10 ltrs"
+                            android:textColor="@color/blackText" />
+                    </LinearLayout>
+
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="W.D : "
-                            android:textColor="@color/blackText"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_wind_direction"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="NW "
-                            android:textColor="@color/blackText" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="W.C: "
-                            android:textColor="@color/blackText"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_water_condition"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Sunny"
-                            android:textColor="@color/blackText" />
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
                     <TextView
 
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Reason : "
+
+                        android:text="Recurrence : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_reason"
+                        android:id="@+id/txt_view_crop_irrigation_card_recurrence"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="To Control Pests"
+                        android:text="Weekly"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Cost : "
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_irrigation_card_total_cost"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="end"
+                        android:text="UGX 150,000"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
@@ -220,6 +243,4 @@
 
         </LinearLayout>
     </LinearLayout>
-
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
