--- a/app/src/main/res/layout/crop_transplanting_list_card.xml
+++ b/app/src/main/res/layout/crop_transplanting_list_card.xml
@@ -1,21 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout
+<LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@color/gray">
-
+    android:orientation="vertical">
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0">
+        >
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -53,7 +46,7 @@
             android:orientation="vertical">
 
             <TextView
-                android:id="@+id/txt_view_crop_spraying_card_date"
+                android:id="@+id/txt_view_crop_transplanting_card_operation_date"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="10dp"
@@ -74,49 +67,58 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_spray_name"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Weed Control Spray"
-                        android:textColor="@color/blackText"
-                        android:textStyle="bold" />
 
-                    <LinearLayout
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_gravity="right"
+                        android:layout_marginRight="4dp"
+                        android:text="Transplanting"
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+                    <TextView
+                        android:id="@+id/txt_crop_transplanting_card_transplanted_area"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="(2.5 ha)"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:gravity="end"
                         android:layout_weight="0.1"
                         android:orientation="horizontal">
 
 
                         <ImageView
-                            android:id="@+id/img_crop_spraying_card_more"
+                            android:id="@+id/img_crop_irrigation_card_more"
                             android:layout_width="24dp"
                             android:layout_height="24dp"
                             android:src="@drawable/more_options_icon" />
                     </LinearLayout>
                 </LinearLayout>
-
+                <View
+                    android:layout_width="match_parent"
+                    android:layout_height="1dp"
+                    android:background="@color/black"
+                    />
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Operator : "
+
+                        android:text="Total Seedlings : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_operator"
+                        android:id="@+id/txt_view_crop_transplanting_card_total_seedlings"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="John Kiwanuka"
+
+                        android:text="100 "
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
@@ -126,93 +128,120 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Rate : "
+
+                        android:text="Seedlings / ha : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_rate"
+                        android:id="@+id/txt_view_crop_transplanting_card_seedlings_per_ha"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="56kg/ha"
+
+                        android:text="200"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
+
+
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Variety Earliness : "
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_transplanting_card_variety_earliness"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Medium "
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:orientation="horizontal">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Harvest Due Date : "
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_transplanting_card_expected_harvesting_date"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:text="2019-04-23"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+
+
+
 
                 <LinearLayout
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="W.D : "
-                            android:textColor="@color/blackText"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_wind_direction"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="NW "
-                            android:textColor="@color/blackText" />
-                    </LinearLayout>
-
-                    <LinearLayout
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:orientation="horizontal">
-
-                        <TextView
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:text="W.C: "
-                            android:textColor="@color/blackText"
-                            android:textStyle="bold" />
-
-                        <TextView
-                            android:id="@+id/txt_view_crop_spraying_card_water_condition"
-                            android:layout_width="wrap_content"
-                            android:layout_height="wrap_content"
-                            android:layout_weight="1"
-                            android:text="Sunny"
-                            android:textColor="@color/blackText" />
-                    </LinearLayout>
-
-
-                </LinearLayout>
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="vertical">
-
                     <TextView
 
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Reason : "
+
+                        android:text="Expected Yield : "
                         android:textColor="@color/blackText"
                         android:textStyle="bold" />
 
                     <TextView
-                        android:id="@+id/txt_view_crop_spraying_card_reason"
+                        android:id="@+id/txt_view_crop_transplanting_card_expected_yield"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="15"
+                        android:textColor="@color/blackText" />
+                    <TextView
+                        android:id="@+id/txt_view_crop_transplanting_card_units"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginLeft="4dp"
+                        android:text="tonnes"
+                        android:textColor="@color/blackText" />
+                </LinearLayout>
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="horizontal">
+
+                    <TextView
+
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+
+                        android:text="Total Cost : "
+                        android:textColor="@color/blackText"
+                        android:textStyle="bold" />
+
+                    <TextView
+                        android:id="@+id/txt_view_crop_transplanting_card_total_cost"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
-                        android:text="To Control Pests"
+                        android:gravity="end"
+                        android:text="UGX 150,000"
                         android:textColor="@color/blackText" />
                 </LinearLayout>
 
@@ -221,5 +250,4 @@
         </LinearLayout>
     </LinearLayout>
 
-
-</android.support.constraint.ConstraintLayout>
+</LinearLayout>
